# opds-server

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/opds_server/: main.py
src/opds_server/api/: catalog.py
src/opds_server/core/: config.py
src/opds_server/db/: access.py
src/opds_server/services/: opds.py  xmlutil.py
tests/: conftest.py  test_catalog_endpoints.py  test_library_path_confinement.py
